# tool-plaid

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
tests/: plaid_link_test.html  test_e2e.py  test_integration.py  test_sdk.py
tool_plaid/: __init__.py  cli.py  config.py  server.py
tool_plaid/auth/: __init__.py  tokens.py
tool_plaid/plaid/: __init__.py  client.py  models.py
tool_plaid/storage/: __init__.py  base.py  file.py
tool_plaid/tools/: __init__.py  transactions.py
tool_plaid/utils/: __init__.py  encryption.py  logging.py
