[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tool-plaid"
version = "0.1.0"
description = "MCP server tool for syncing Plaid transactions and account balances"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "mcp>=1.25.0",
    "plaid-python>=16.0.0",
    "pydantic>=2.0",
    "cryptography>=42.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "httpx-mock>=0.0",
]

[project.scripts]
plaid-tool = "tool_plaid.cli:main"

[tool.setuptools.packages.find]
where = ["."]
